[tool.poetry]
name = "Test Downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.6"
aiodns = "3.2.0"
aiohappyeyeballs = "2.3.4"
aiohttp = "3.10.1"
aiohttp_socks = "0.9.0"
aiosignal = "1.3.1"
altair = "5.3.0"
async-timeout = "4.0.3"
attrs = "24.2.0"
beautifulsoup4 = "4.12.3"
blinker = "1.8.2"
Brotli = "1.1.0"
browser-cookie3 = "0.19.1"
cachetools = "5.4.0"
cchardet = "2.1.7"
certifi = "2024.7.4"
cffi = "1.17.0"
charset-normalizer = "3.3.2"
click = "8.1.7"
colorama = "0.4.6"
elastic-transport = "8.13.1"
elasticsearch = "8.14.0"
exceptiongroup = "1.2.2"
fake-useragent = "1.5.1"
ffmpeg = "1.4"
filelock = "3.15.4"
frozenlist = "1.4.1"
geographiclib = "2.0"
geopy = "2.4.1"
gitdb = "4.0.11"
GitPython = "3.1.43"
googletransx = "2.4.2"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.7"
importlib_resources = "6.4.0"
instaloader = "4.12.1"
Jinja2 = "3.1.4"
jsonschema = "4.23.0"
jsonschema-specifications = "2023.12.1"
lxml = "5.2.2"
lz4 = "4.3.3"
markdown-it-py = "3.0.0"
MarkupSafe = "2.1.5"
mdurl = "0.1.2"
multidict = "6.0.5"
mutagen = "1.47.0"
numpy = "1.24.4"
outcome = "1.3.0.post0"
packaging = "24.1"
pandas = "2.0.3"
pillow = "10.4.0"
pkgutil_resolve_name = "1.3.10"
playwright = "1.45.1"
protobuf = "5.27.3"
pyarrow = "17.0.0"
pycares = "4.4.0"
pycparser = "2.22"
pycryptodomex = "3.20.0"
pydeck = "0.9.1"
pyee = "11.1.0"
Pygments = "2.18.0"
pyktok = "0.0.27"
PySocks = "1.7.1"
python-dateutil = "2.9.0.post0"
python-socks = "2.5.0"
pytz = "2024.1"
referencing = "0.35.1"
requests = "2.32.3"
rich = "13.7.1"
rpds-py = "0.20.0"
schedule = "1.2.2"
selenium = "4.23.1"
selenium-stealth = "1.0.6"
six = "1.16.0"
smmap = "5.0.1"
sniffio = "1.3.1"
snscrape = "0.7.0.20230622"
sortedcontainers = "2.4.0"
soupsieve = "2.5"
streamlit = "1.37.1"
streamlit-option-menu = "0.3.13"
tenacity = "8.5.0"
TikTokApi = "3.9.9"
toml = "0.10.2"
toolz = "0.12.1"
tornado = "6.4.1"
tqdm = "4.66.5"
trio = "0.26.1"
trio-websocket = "0.11.1"
twint = "2.1.20"
typing_extensions = "4.12.2"
tzdata = "2024.1"
urllib3 = "2.2.2"
watchdog = "4.0.1"
websocket-client = "1.8.0"
websockets = "12.0"
wsproto = "1.2.0"
yarl = "1.9.4"
yt-dlp = "2024.8.6"
zipp = "3.19.2"

[tool.poetry.dev-dependencies]
